// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attributes not rendered on a wrapper component 1`] = `<div />`;

exports[`Attributes passed from wrapper component to element 1`] = `
<div>
  <span
    data-attr="Other custom attr"
    id="default-id"
  />
</div>
`;

exports[`Attributes rendered on an element 1`] = `
<div
  data-name="Default name"
  id="default-id"
/>
`;

exports[`Attributes rendered on an element with parent props 1`] = `
<div
  data-name="Custom name"
  id="custom-id"
/>
`;

exports[`Basic conditional rendering with the prop flag 1`] = `
<div>
  hi
</div>
`;

exports[`Basic conditional rendering without the prop flag 1`] = `null`;

exports[`Classes with a single class 1`] = `
<div
  className="some-class"
/>
`;

exports[`Classes with multiple classes 1`] = `
<div
  className="some-class another-class"
/>
`;

exports[`Classes with no classes 1`] = `<div />`;

exports[`Conditional rendering by function with sum of props greater than 10 1`] = `
<div>
  hi
</div>
`;

exports[`Conditional rendering by function with sum of props less than 10 1`] = `null`;

exports[`Div with a conditional class gets a single extra class with the prop flag 1`] = `
<div
  className="thing thing--big"
/>
`;

exports[`Div with a conditional class gets two extra classes without the prop flag 1`] = `
<div
  className="thing thing--small small"
/>
`;

exports[`Passing props passes props to child components 1`] = `
<div>
  <span>
    a gif
  </span>
  <img
    alt="aw yis"
    src="awyis.gif"
  />
</div>
`;

exports[`Renaming props when passing to child components 1`] = `
<div>
  <span>
    a gif
  </span>
  <img
    alt="description: a gif"
    src="awyis.gif"
  />
</div>
`;
